--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,5 @@
   <string name="userparser">UserParser</string>
   <string name="tagparser">TagParser</string>
 
-  <string name="selected_user_parser">selected_user_parser</string>
-  <string name="selected_tag_parser">selected_tag_parser</string>
+  <string name="selected_parser">selected_parser</string>
 </resources>
